
Comment writer limits use of TinyMCE to a single instance (as it fails
with subcomments for unknown reason).

Added personalisation of catdef statements using the same function as
the statementbank.

Fix to the bands date in report_report_profile: should a year field be
added to the stats table?

Added leaving and start date seach option the Custom Groups page in Info.



Version ClaSS-0.9.31 release (2010/12/10)
-----------------------------------------

Added changing the stage field to the category_editor.

A House points total can now be calculated (fetchHousePointsTotal) and
displayed on the other groups page.

The bus changes now identify a change from a regular bus.

Extra contact fields added to single_field array.

Removed enrol_applications from school.php. All applications are now live.

Improved highlighting budgets over balance.

Allow for multiple profiles linked ot one report.



Version ClaSS-0.9.30 release (2010/11/12)
-----------------------------------------

Added pagestyle to the new_report form.

Generate report columns now check for strands and uses component
status to do so it its for a compound report.

Implemented 'compound' columns which are reports with just categories
not comments. The edit report script changed to make sense of
this. The mark table displays a numerical value for the categories checked.

The currency exchange rate for orders is now set in categorydef (and is removed
from school.php) to allow year on year changes.

The delete_transport_booking function can now update as well as delete
given an end date.

The checksidsaction js can now grab the vlaue of any form element
named by selectname (not just a select value) and checkboxes don't
have to be named sids either.

The transport print option accepts a date and is no longer limited
to the current day.

Both other groups and form groups in Admin given a print option. TODO:
fix the button submits in the table!
