@@ -177,7 +177,7 @@ function fetchBus($busid='-1'){
  *
  * @param integer $sid
  * @param date $date
- * @param enum $day
+ * @param enum $dayb
  * @param enum $direction
  * @return array
  *
@@ -194,7 +194,7 @@ function list_student_journey_bookings($sid,$date,$day='%',$direction='%'){
 						ORDER BY b.startdate DESC, b.enddate DESC, b.day ASC;");
 	while($b=mysql_fetch_array($d_b,MYSQL_ASSOC)){
 		$bookings[]=$b;
-		if($sid==1181){trigger_error($sid.' : '.$b['bus_id'].' : '.$b['startdate'].' '.$b['enddate'],E_USER_WARNING);}
+		if($sid==617){trigger_error($sid.' : '.$b['bus_id'].' : '.$b['startdate'].' '.$b['enddate'],E_USER_WARNING);}
 		}
 
 	return $bookings;
