@@ -23,6 +23,8 @@ added to the stats table?
 
 Added leaving and start date seach option the Custom Groups page in Info.
 
+Added the booking day to a transport's xml for checking one off journeys.
+
 
 
 Version ClaSS-0.9.31 release (2010/12/10)
